[tool.poetry]
name = "envmapping"
version = "0.1.0"
description = "Mapping environment variables to python objects"
authors = ["Ilya Biryukov <biryukovsky@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
mock = "^3.0.5"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
